--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,6 +12,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Recipeverse"
         tools:targetApi="31">
+        <service
+            android:name=".control.Fetch"
+            android:enabled="true"
+            android:exported="true"></service>
+
+        <activity
+            android:name=".view.SearchActivity"
+            android:exported="false" />
         <activity
             android:name=".view.MainActivity"
             android:exported="true">
