--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,8 +29,8 @@ android {
 }
 
 dependencies {
-    implementation("com.android.volley:volley:1.2.0")
-
+    implementation "com.android.volley:volley:1.2.0"
+    implementation 'com.github.bumptech.glide:glide:4.13.2'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
